--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,8 +1,35 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="/static/css/styles.css" type="text/css">
-  </head>
-  <body>
-    The best place to start is the "WelcomeController.py" file in app/controllers.
-  </body>
+	<head>
+		<title>Login/Registration</title>
+		<!-- <link rel="stylesheet" href="/static/css/styles.css" type="text/css"> -->
+	</head>
+	<body>
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				{% for message in messages %}
+					<p class = "error">{{ message }}</p>
+				{% endfor %}
+			{% endif %}
+		{% endwith %}
+		<div class="register">
+			<form action="/register" method="POST">
+				<p> Name: <input type="text" name="name"> </p>
+				<p> Alias: <input type="text" name="alias"> </p>
+				<p> Email: <input type="text" name="email"> </p>
+				<p> Password: <input type="password" name="password"> </p>
+				<p> *Password should be at least 8 characters. </p>
+				<p> Confirm PW: <input type="password" name="confirm"> </p>
+				<p> Date of Birth: <input type="date" name="bday"> </p>
+				<input type="submit" value="Register">
+			</form>
+		</div>
+		<div class="login">
+			<form action="/login" method="POST">
+				<p> Email: <input type="text" name="email"> </p>
+				<p> Password: <input type="password" name="password"> </p>
+				<input type="submit" value="Login">
+			</form>
+		</div>
+	</body>
 </html>
